# tera

./: CMakeLists.txt  LICENSE  Makefile  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  scheduled-1.4.yml
docs/: README.md
duckdb_tera_binding/: Cargo.toml  cbindgen.toml
duckdb_tera_binding/src/: lib.rs
scripts/: bootstrap-template.py
src/: tera_extension.cpp
src/include/: rust.h  tera_extension.hpp
templates/: index.html
test/: README.md
test/sql/: tera.test
