[package]
name = "duckdb_tera_binding"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "duckdb_tera_binding"
crate-type = ["staticlib"]

[dependencies]
serde_json = "1.0.145"


[dependencies.tera]
version = "1.20.0"
default-features = false
features = ["humansize", "chrono", "rand"] # only enable features you need
